Fetch modernizr library locally, rather than from CDN.

--- a/boston_trips.html
+++ b/boston_trips.html
@@ -20,7 +20,7 @@
 		<script src="boston_trips.js" type="text/javascript"></script>
 		<script src="accessibleGridMPM.js" type="text/javascript"></script> 
 		<script src="mpmutils.js" type="text/javascript"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js"></script>  
+		<script src="libs/modernizr-2.8.2-custom.min.js"></script>  
 
 	</head>
 
