First version to run on web-dev

--- a/boston_trips.html
+++ b/boston_trips.html
@@ -38,9 +38,12 @@
             </a>
         </div>
         
-		<div id='banner_heading'>Model Trips: Corridors to Boston/Central Area by Mode (2012-2040)</div>
+		<div id='banner_heading'>Model Trips: Corridors to Boston/Central Area by Mode (2016-2040)</div>
 
-		<div id="notseen01" class="offscreen">Page opens with map frame on left and combo boxes on right.  To get a data table use combo boxes to select a year then a corridor of origin, then click Get Data button.  Table can then be read using table commands.  Transit data is presented in pie charts, but accessible table also available using Charts button.  
+		<div id="notseen01" class="offscreen">Page opens with map frame on left and combo boxes on right.  
+                                              To get a data table use combo boxes to select a year then a corridor of origin, then click Get Data button. 
+                                              Table can then be read using table commands.  
+                                              Transit data is presented in pie charts, but accessible table also available using Charts button.  
 		</div>
 
 
@@ -68,8 +71,8 @@
 					<label for="selected_year">Select desired year:</label>
 				</h2>
 				<select id="selected_year">
-					<option value="2012">Select a year</option>
-					<option value="2012">Base Year: 2012</option>
+					<option value="2016">Select a year</option>
+					<option value="2016">Base Year: 2016</option>
 					<option value="2040">Future Year: 2040</option>
 				</select>
 			</div>
