--- a/boston_trips.html
+++ b/boston_trips.html
@@ -25,8 +25,23 @@
 		<script src="boston_trips.js" type="text/javascript"></script>
 		<script src="accessibleGridMPM.js" type="text/javascript"></script> 
 		<script src="mpmutils.js" type="text/javascript"></script>
-	</head>
 
+        <script>
+        (function(i,s,o,g,r,a,m){
+            i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();
+            a=s.createElement(o),m=s.getElementsByTagName(o)[0];
+            a.async=1;
+            a.src=g;
+            m.parentNode.insertBefore(a,m)})(window,
+                                             document,
+                                             "script",
+                                             "https://www.google-analytics.com/analytics.js",
+                                             "ga");
+            ga("create", "UA-39489988-1", {"cookieDomain":"auto"});
+            ga("set", "anonymizeIp", true);
+            ga("send", "pageview");
+        </script>        
+	</head>
 
 	<body onload="CTPS.bostonTrips.init()">
     
